--- a/src/VIEW/PacoteVIEW.form
+++ b/src/VIEW/PacoteVIEW.form
@@ -105,7 +105,7 @@
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="cmbGrupo_pacote" min="-2" pref="296" max="-2" attributes="0"/>
-                                  <Component id="txtVencimento_pacote" min="-2" pref="164" max="-2" attributes="0"/>
+                                  <Component id="txtVencimento_pacote" min="-2" pref="166" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -180,7 +180,7 @@
                               <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="cmbGrupo_pacote" min="-2" max="-2" attributes="0"/>
+                          <Component id="cmbGrupo_pacote" linkSize="2" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -192,9 +192,9 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtVencimento_pacote" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtVencimento_pacote" linkSize="2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="22" max="32767" attributes="0"/>
+              <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
